# mjlab

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  Dockerfile  Makefile  README.md  genindex.html  index.html  py-modindex.html  pyproject.toml  search.html
.claude/: settings.json
.doctrees/: environment.pickle
.doctrees/source/api/: terrains.doctree
.github/workflows/: ci.yml  deploy-benchmarks.yml  docs.yml
_modules/: index.html
_modules/mjlab/actuator/: actuator.html  builtin_actuator.html  builtin_group.html  dc_actuator.html  delayed_actuator.html  learned_actuator.html  pd_actuator.html  xml_actuator.html
_modules/mjlab/entity/: data.html  entity.html
_modules/mjlab/envs/: manager_based_rl_env.html
_modules/mjlab/managers/: action_manager.html  command_manager.html  curriculum_manager.html  event_manager.html  manager_base.html  observation_manager.html  reward_manager.html  scene_entity_config.html  termination_manager.html
_modules/mjlab/scene/: scene.html
_modules/mjlab/sensor/: builtin_sensor.html  contact_sensor.html  raycast_sensor.html  sensor.html
_modules/mjlab/sim/: sim.html  sim_data.html
_modules/mjlab/terrains/: heightfield_terrains.html  primitive_terrains.html  terrain_generator.html  terrain_importer.html
docs/: conf.py  create_new_task.md  faq.md  index.rst  installation_guide.md  migration_guide.md  motivation.md  spec_config_docs.md
docs/api/: actuators.md  distributed_training.md  domain_randomization.md  nan_guard.md  observation_history_delay.md  spec_config.md
docs/source/: actuators.rst  faq.rst  installation.rst  migration_isaac_lab.rst  nan_guard.rst  observation.rst  randomization.rst  raycast_sensor.rst  sensors.rst
notebooks/: demo.ipynb
scripts/: run_docker.sh
scripts/benchmarks/: README.md  generate_report.py  measure_throughput.py  nightly_train.sh
scripts/benchmarks/systemd/: README.md  mjlab-nightly.service  mjlab-nightly.timer
scripts/demos/: raycast_sensor.py
source/: actuators.html  distributed_training.html  faq.html  installation.html  migration_isaac_lab.html  motivation.html  nan_guard.html  observation.html  randomization.html  raycast_sensor.html  sensors.html
source/api/: actuator.html  entity.html  envs.html  index.html  managers.html  scene.html  sensor.html  sim.html  terrains.html
src/mjlab/: spaces.py
src/mjlab/actuator/: __init__.py  actuator.py  builtin_actuator.py  builtin_group.py  dc_actuator.py  delayed_actuator.py  learned_actuator.py  pd_actuator.py  utils.py  xml_actuator.py
src/mjlab/asset_zoo/robocup_assets/: __init__.py
src/mjlab/asset_zoo/robocup_assets/ball/: __init__.py  ball.xml  ball_constants.py  visual_ball.mtl
src/mjlab/asset_zoo/robocup_assets/field/: __init__.py  campo_robo_cup-16x11.xcf  field.xml  field_constants.py
src/mjlab/asset_zoo/robocup_assets/goalpost/: __init__.py  goalpost.mtl  goalpost.xml  goalpost_constants.py
src/mjlab/asset_zoo/robocup_field/: __init__.py  robocup_field.xml  robocup_field_constants.py
src/mjlab/asset_zoo/robots/: __init__.py
src/mjlab/asset_zoo/robots/booster_t1_23dof/: __init__.py  t1_constants.py
src/mjlab/asset_zoo/robots/i2rt_yam/: yam_constants.py
src/mjlab/asset_zoo/robots/unitree_g1/: g1_constants.py
src/mjlab/asset_zoo/robots/unitree_go1/: README.md  go1_constants.py
src/mjlab/entity/: data.py  entity.py
src/mjlab/envs/: __init__.py  manager_based_env.py  manager_based_rl_env.py
src/mjlab/envs/mdp/: events.py  observations.py  rewards.py
src/mjlab/envs/mdp/actions/: __init__.py  actions.py  actions_config.py  joint_actions.py  site_actions.py  tendon_actions.py
src/mjlab/managers/: __init__.py  action_manager.py  command_manager.py  curriculum_manager.py  event_manager.py  manager_term_config.py  observation_manager.py  reward_manager.py  scene_entity_config.py  termination_manager.py
src/mjlab/rl/: config.py  exporter_utils.py  vecenv_wrapper.py
src/mjlab/scene/: scene.py
src/mjlab/scripts/: csv_to_npz.py  csv_to_npz_booster_t1_23dof.py  demo.py  gcs.py  list_envs.py  nan_viz.py  play.py  train.py  view_portiere.py
src/mjlab/sensor/: __init__.py  contact_sensor.py  raycast_sensor.py  sensor.py
src/mjlab/sim/: randomization.py  sim.py  sim_data.py
src/mjlab/tasks/: registry.py
src/mjlab/tasks/manipulation/: lift_cube_env_cfg.py
src/mjlab/tasks/manipulation/mdp/: rewards.py  (+2 more)
src/mjlab/tasks/tracking/: tracking_env_cfg.py
src/mjlab/tasks/velocity/: velocity_env_cfg.py
src/mjlab/terrains/: config.py  heightfield_terrains.py  terrain_generator.py  terrain_importer.py
src/mjlab/utils/: nan_guard.py  os.py  spec.py  spec_config.py  string.py  torch.py  wandb.py
src/mjlab/utils/buffers/: __init__.py  circular_buffer.py  delay_buffer.py
src/mjlab/utils/lab_api/: math.py
src/mjlab/viewer/: __init__.py  base.py  debug_visualizer.py  native.py  offscreen_renderer.py  viser.py  viser_conversions.py  viser_scene.py  viser_visualizer.py
src/mjlab/viewer/native/: viewer.py  visualizer.py
src/mjlab/viewer/viser/: __init__.py  conversions.py  reward_plotter.py  scene.py  viewer.py
src/mjlab/wrappers/: __init__.py
tests/: conftest.py  smoke_test.py  test_action_manager.py  test_actions.py  test_actuator.py  test_actuator_builtin_group.py  test_apply_delta_pose.py  test_builtin_sensor.py  test_circular_buffer.py  test_contact_sensor.py  test_dc_actuator.py  test_delay_buffer.py  test_delayed_actuator.py  test_domain_randomization.py  test_encoder_bias.py  test_entity.py  test_entity_data.py  test_events.py  test_fixture_models.py  test_g1_constants.py  test_go1_constants.py  test_learned_actuator.py  test_manager_config_immutability.py  test_nan_guard.py  test_observation_delay.py  test_observation_history.py  test_os.py  test_pd_actuator.py  test_raycast_sensor.py  test_rewards.py  test_rl_exporter.py  test_scene.py  test_sim.py  test_site_actions.py  test_spec_config.py  test_task_configs.py  test_tendon_actions.py  test_terminations.py  test_tracking_task.py  test_velocity_task.py  (+2 more)
tests/fixtures/: floating_base_2joint.xml  floating_base_articulated.xml
(+32 files in other folders)
